--- a/src/views/getCRUD.ejs
+++ b/src/views/getCRUD.ejs
@@ -32,7 +32,9 @@
           <button type="button">
             <a href="/edit-crud?id=<%=data[i].id%>">Edit</a>
           </button>
-          <button type="button"><a href="">Delete</a></button>
+          <button type="button">
+            <a href="/delete-crud?id=<%=data[i].id%>">Delete</a>
+          </button>
         </td>
       </tr>
       <% } %>
